LMS-demo/force-app/main/default/objects/Invoice__c/fields/Count_of_Sellitems__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sellitems__c</fullName>
    <label>Count of Sellitems</label>
    <summaryForeignKey>Sellitem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>