LMS-demo/force-app/main/default/objects/Invoice__c/fields/Invoice_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Closed_Date__c</fullName>
    <label>Invoice Closed Date</label>
    <type>Date</type>
</CustomField>