LMS-demo/force-app/main/default/objects/Invoice__c/fields/Invoice_Desc__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Desc__c</fullName>
    <label>Invoice Desc</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>