LMS-demo/force-app/main/default/objects/Invoice__c/fields/Maximum_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Count__c</fullName>
    <label>Maximum Count</label>
    <summarizedField>Sellitem__c.Sellitem_Price__c</summarizedField>
    <summaryForeignKey>Sellitem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>