LMS-demo/force-app/main/default/objects/Invoice__c/fields/Minimum_Count__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Count__c</fullName>
    <label>Minimum Count</label>
    <summarizedField>Sellitem__c.Sellitem_Price__c</summarizedField>
    <summaryForeignKey>Sellitem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>