LMS-demo/force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Pricce__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Pricce__c</fullName>
    <label>Total Invoice Pricce</label>
    <summarizedField>Sellitem__c.Total_Invoice_Price__c</summarizedField>
    <summaryForeignKey>Sellitem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>